--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -37,4 +37,9 @@
         android:title="Exit"
 
         />
+    <item
+        android:id="@+id/item8"
+        android:title="Rate us!"
+
+        />
 </menu>
